# supervised-spectra

./: .gitignore  pyproject.toml
notebooks/: 01_Spectra_tutorial_refactored.ipynb  02_Spectra_test_separated.ipynb  03_Spectra_sams_data.ipynb  compare_runs.ipynb  gene_set.json
scripts/: investigate-spec-v2-postprocess.py  postprocess_spectra_v2.py  run_spec_v2.sh  sbatch_postprocess_spectra.sh  slurm-54161.out  slurm-54163.out  slurm-54165.out  spec-v2.py
scripts/logs/: spectra_cui_full_post_54162.err  spectra_cui_full_post_54164.err  spectra_cui_full_post_54164.out  spectra_cui_full_post_54166.err  stderr_54154.err  stderr_54156.err  stderr_54157.err  stdout_54155.out  stdout_54156.out  stdout_54157.out
scripts/results/: cui23_processed_spectrav2_example_20241216_spectra_epochs_10000-time_1740428884.7412221markers.csv  gene_dict.json
src/Spectra/: Spectra.py  Spectra_core.py  Spectra_model.py  __init__.py
