[tool.poetry]
name = "supervised-spectra"
version = "0.1.0"
description = ""
authors = ["Rahul Saha <rah4927@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
scanpy = "^1.10.4"
torch = "^2.6.0"
opt-einsum = "^3.4.0"
pyvis = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
